--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cloudconvert": "^2.3.4",
     "esm": "^3.2.25",
     "ffmpeg": "^0.0.4",
+    "firebase": "^10.1.0",
     "fluent-ffmpeg": "^2.1.2",
     "node-fetch": "^3.3.1",
     "openai": "^3.2.1",
